syntax = "proto3";

option csharp_namespace = "gPRC";

package greet;

service Greeter {
  rpc ChangeVoice (stream VoiceRequest) returns (stream VoiceResponse) {
  }
}

message AudioMeta {
  enum Encoding {
    PCM_SIGNED = 0;
  }

  Encoding encoding = 1;
  int32 sample_bits = 2;
  int32 sample_rate = 3;
  map<string, string> extra = 4;
}

message AudioSample {
  AudioMeta meta = 1;
  bytes data = 2;
}

message VoiceRequest {
  AudioSample audio_sample = 2;
}

message VoiceResponse {
  AudioSample audio_sample = 2;
}
